[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/icons/logout_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/icons/settings_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/icons/build_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/icons/guide_icon.png" type="Texture" id=4]
[ext_resource path="res://ui/data_points_display.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/number_display.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sprites/icons/notif_icon.png" type="Texture" id=7]
[ext_resource path="res://ui/CityUI.gd" type="Script" id=8]
[ext_resource path="res://assets/sprites/icons/cancel_build_icon.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/ui/building_city_background.png" type="Texture" id=11]
[ext_resource path="res://ui/event_message.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sprites/icons/notif_icon_active.png" type="Texture" id=13]
[ext_resource path="res://assets/sounds/notification.mp3" type="AudioStream" id=14]

[node name="CityUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="TopContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 136.0
size_flags_horizontal = 3

[node name="TopLeftContainer" type="VBoxContainer" parent="VBoxContainer/TopContainer"]
margin_right = 177.0
margin_bottom = 136.0

[node name="Population" parent="VBoxContainer/TopContainer/TopLeftContainer" instance=ExtResource( 6 )]
margin_right = 177.0

[node name="DataPoints" parent="VBoxContainer/TopContainer/TopLeftContainer" instance=ExtResource( 5 )]
margin_top = 36.0
margin_right = 177.0
margin_bottom = 68.0

[node name="NotificationButton" type="TextureButton" parent="VBoxContainer/TopContainer/TopLeftContainer"]
margin_top = 72.0
margin_right = 177.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 7 )
stretch_mode = 3

[node name="NotificationButtonActive" type="TextureButton" parent="VBoxContainer/TopContainer/TopLeftContainer"]
visible = false
margin_top = 72.0
margin_right = 177.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 50 )
texture_normal = ExtResource( 13 )
stretch_mode = 3

[node name="EventMessage" parent="VBoxContainer/TopContainer/TopLeftContainer" instance=ExtResource( 12 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 140.0
margin_right = 323.0
margin_bottom = 268.0

[node name="NotificationPlayer" type="AudioStreamPlayer" parent="VBoxContainer/TopContainer/TopLeftContainer"]
stream = ExtResource( 14 )
volume_db = -25.0
pitch_scale = 0.9

[node name="TopRightContainer" type="HBoxContainer" parent="VBoxContainer/TopContainer"]
margin_left = 792.0
margin_right = 1004.0
margin_bottom = 68.0
size_flags_horizontal = 10
size_flags_vertical = 0
custom_constants/separation = 10

[node name="GuideButton" type="TextureButton" parent="VBoxContainer/TopContainer/TopRightContainer"]
margin_right = 64.0
margin_bottom = 68.0
texture_normal = ExtResource( 4 )

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer/TopContainer/TopRightContainer"]
margin_left = 74.0
margin_right = 138.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )

[node name="LogoutButton" type="TextureButton" parent="VBoxContainer/TopContainer/TopRightContainer"]
margin_left = 148.0
margin_right = 212.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 1 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="VBoxContainer"]
visible = true
margin_left = 377.0
margin_top = 340.5
margin_right = 627.0
margin_bottom = 428.0
rect_min_size = Vector2( 250, 87.5 )
size_flags_horizontal = 4
size_flags_vertical = 10
size_flags_stretch_ratio = 2.0
popup_exclusive = true
window_title = "Confirmez l'emplacement"
dialog_text = "
L'emplacement vous convient ?"

[node name="BottomContainer" type="MarginContainer" parent="VBoxContainer"]
margin_left = 856.0
margin_top = 432.0
margin_right = 1004.0
margin_bottom = 580.0
mouse_filter = 1
size_flags_horizontal = 8
size_flags_vertical = 10
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="CancelContainer" type="HBoxContainer" parent="VBoxContainer/BottomContainer"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 270.0
margin_bottom = 138.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomContainer/CancelContainer"]
margin_right = 128.0
margin_bottom = 128.0

[node name="Background" type="TextureRect" parent="VBoxContainer/BottomContainer/CancelContainer/MarginContainer"]
margin_top = 16.0
margin_right = 128.0
margin_bottom = 112.0
size_flags_vertical = 4
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingSprite" type="TextureRect" parent="VBoxContainer/BottomContainer/CancelContainer/MarginContainer/Background"]
anchor_left = 0.109
anchor_top = 0.031
anchor_right = 0.883
anchor_bottom = 0.979
margin_left = 0.0479994
margin_top = 0.0239999
margin_right = -0.0240021
margin_bottom = 0.0159988
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelBuildButton" type="TextureButton" parent="VBoxContainer/BottomContainer/CancelContainer"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource( 10 )
stretch_mode = 2

[node name="BuildButton" type="TextureButton" parent="VBoxContainer/BottomContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 138.0
margin_bottom = 138.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource( 3 )
stretch_mode = 2

[connection signal="pressed" from="VBoxContainer/TopContainer/TopLeftContainer/NotificationButtonActive" to="." method="_on_NotificationButton_pressed"]
[connection signal="close_notification" from="VBoxContainer/TopContainer/TopLeftContainer/EventMessage" to="." method="_on_EventMessage_close_notification"]
[connection signal="start_dialogue" from="VBoxContainer/TopContainer/TopLeftContainer/EventMessage" to="." method="_on_EventMessage_start_dialogue"]
[connection signal="pressed" from="VBoxContainer/TopContainer/TopRightContainer/GuideButton" to="." method="_on_GuideButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TopContainer/TopRightContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TopContainer/TopRightContainer/LogoutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomContainer/CancelContainer/CancelBuildButton" to="." method="_on_CancelBuildButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomContainer/BuildButton" to="." method="_on_BuildButton_pressed"]
